--- a/SpotlightDesktop/SpotlightDesktop.csproj
+++ b/SpotlightDesktop/SpotlightDesktop.csproj
@@ -48,10 +48,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ImageUtil.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DesktopWallpaper.cs" />
     <Compile Include="SpotlightImage.cs" />
+    <Compile Include="RegistryUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
